--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
@@ -12,7 +13,9 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "whatwg-fetch": "^3.0.0",
+    "xlsx": "^0.15.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.3",
@@ -21,6 +24,7 @@
     "@vue/cli-plugin-unit-jest": "~4.2.3",
     "@vue/cli-plugin-vuex": "~4.2.3",
     "@vue/cli-service": "~4.2.3",
+    "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "1.0.0-beta.32",
     "babel-eslint": "^10.1.0",
@@ -30,6 +34,14 @@
     "prettier": "^2.0.2",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "stylelint": "^13.2.1",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.0.0",
+    "stylelint-scss": "^3.16.0",
     "vue-template-compiler": "^2.6.11"
+  },
+  "resolutions": {
+    "minimist": "1.2.3"
   }
 }
